# ds-free-api

./: AGENTS.md  Cargo.toml  NOTICE.md  README.en.md  README.md  config.example.toml  justfile
docker/: docker-compose.yaml
docs/: development.md
ds_core/: Cargo.toml  README.en.md  README.md  raw-api-reference.md
ds_core/src/: accounts.rs  chat.rs  config.rs  lib.rs
ds_core/src/accounts/: client.rs  pool.rs  pow.rs
ds_core/src/chat/: request.rs  response.rs
src/: config.rs  lib.rs  openai_adapter.rs
src/openai_adapter/: models.rs  request.rs  response.rs
src/openai_adapter/request/: files.rs
src/openai_adapter/response/: converter.rs
src/server/: admin.rs
web/src/lib/: api.ts
web/src/pages/: ConfigPage.tsx
