[package]
name = "ds_core"
version = "0.2.7-pre1"
edition = "2024"

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bytes = "1"
dashmap = "6"
futures = "0.3.32"
log = "0.4.29"
pin-project-lite = "0.2.17"
wreq = { version = "5.3.0", default-features = false, features = ["json", "stream", "multipart", "socks"] }
wreq-util = "2.2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["macros", "sync"] }
wasmtime = { version = "45", features = ["cranelift"] }
